# rmrk-execute-compute-storage-smart-contracts

./: Cargo.toml  README.md  build.sh  rust-toolchain.toml
foresta-contracts/algo-store/: Cargo.toml  algo_nft.rs  error.rs  lib.rs
foresta-contracts/algo_execute/: Cargo.toml  lib.rs
foresta-contracts/catalog/: Cargo.toml  lib.rs
foresta-contracts/execute/: Cargo.toml  error.rs  execute_nft.rs  lib.rs
foresta-contracts/phala-contract/: Cargo.toml  error.rs  lib.rs  utils.rs
foresta-contracts/proxy/: Cargo.toml  error.rs  lib.rs  proxy.rs  proxy_traits.rs  types.rs
