[package]
name = "algo_nft"
version = "0.1.0"
authors = ["CryptoPoeta <cryptopoeta@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }
openbrush = { tag = "4.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = [
    "psp34",
    "ownable",
    "reentrancy_guard",
] }
ink_storage = { version = "4.2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
ink_e2e = "4.3.0"

[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "pink" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []
