[package]
name = "catalog"
version = "0.1.0"
authors = ["[CryptoPoeta] <[cryptopoeta@gmail.com]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_env = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
rmrk = { version = "0.6.0", git="https://github.com/rmrk-team/rmrk-ink", default-features = false }
openbrush = { tag = "4.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34", "ownable", "reentrancy_guard"] }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "openbrush/std",
    "rmrk/std",
    "scale/std",
    "scale-info/std",
]

ink-as-dependency = []
e2e-tests = []